CSS: Fix submit button jumping on submit
refs #3676

--- a/public/css/icinga/forms.less
+++ b/public/css/icinga/forms.less
@@ -319,7 +319,7 @@ input:checked + .toggle-slider:before {
 .control-group input[disabled],
 .control-group select[disabled] {
   background: @gray-lighter;
-  border: none;
+  border-color: transparent;
 }
 
 // Errors and additional information
